--- a/applications/ws/prod/client/tab/mobile/rentCars/cars.html
+++ b/applications/ws/prod/client/tab/mobile/rentCars/cars.html
@@ -25,7 +25,7 @@
       </header>
       <br />
       <br />
-      <div class="btn-group btn-group-justified" style="padding-top: 35">
+      <div class="btn-group btn-group-justified hide" style="padding-top: 35">
          <a href="#" class="btn btn-primary active hatchback_button">Hatchback</a>
          <a href="#" class="btn btn-primary sedan_button">Sedan</a> <a href="#"
             class="btn btn-primary suv_button">Suv</a>
@@ -36,7 +36,49 @@
             <div class="row content col-sm-12 text-left ">
                <!--  ACTUAL BODY OF THE mobile -->
                <div class="panel-body mobile ">
-                  <div class="row hatchback">
+		  <div class="row">
+                     <hr />
+                     <div class="row">
+                        <div href="#portfolioModal1" class="col-xs-6"
+                           data-toggle="modal">
+                           <img src="../images/mobile/maruti_swift_vdi_large.png"
+                              class="img-responsive mobile hatchbackCar" id="1"
+                              alt="Maruti Suzuki Swift">
+                        </div>
+                        <div class="title text-primary col-xs-6">
+                           <br /> <br />Maruti Suzuki Swift
+                        </div>
+                     </div>
+                     <hr />
+                     <div class="row">
+                        <div href="#portfolioModal3" class="col-xs-6"
+                           data-toggle="modal">
+                           <img src="../images/mobile/chevrolet_tavera.png"
+                              class="img-responsive mobile suvCar" id="3"
+                              alt="Chevrolet Tavera">
+                        </div>
+                        <div class="title text-primary col-xs-6">
+                           <br /> <br />Chevrolet Tavera
+                        </div>
+                     </div>
+                     <hr />
+                     <div class="row">
+                        <div href="#portfolioModal6" class="col-xs-6"
+                           data-toggle="modal">
+                           <img src="../images/mobile/toyota_innova_large.png"
+                              class="img-responsive mobile suvCar" id="6"
+                              alt="Toyota Innova">
+                        </div>
+                        <div class="title text-primary col-xs-6">
+                           <br /> <br />Toyota Innova
+                        </div>
+                     </div>
+                     <hr />
+                  </div>
+
+
+
+                  <div class="row hatchback hide">
                      <hr />
                      <div class="row">
                         <div href="#portfolioModal1" class="col-xs-6"
@@ -246,7 +288,6 @@
                      </div>
                   </div>
                </div>
-            </div>
             </div>
       </section>
       </div>
