--- a/applications/ws/prod/client/tab/website/rentCars/cars.html
+++ b/applications/ws/prod/client/tab/website/rentCars/cars.html
@@ -18,20 +18,40 @@
             </div>
          </div>
       </header>
-      <div class="row header-margin">
+      <div class="row header-margin hide">
          <div class="btn-group btn-group-justified" style="padding-top:35">
             <a href="#" class="btn btn-primary active hatchback_button" >Hatchback</a>
             <a href="#" class="btn btn-primary sedan_button">Sedan</a>
             <a href="#" class="btn btn-primary suv_button">Suv</a>
          </div>
       </div>
-      <div class="container ">
+      <div class="container " style="padding-top:10%;padding-bottom:10%">
          <section style="padding-top:0">
             <div class="row content col-sm-12 col-lg-12 text-left " >
                <!--  ACTUAL BODY OF THE WEBSITE -->
                <div class="panel panel-white " id="row1">
                   <div class="panel-body">
                      <div class="row hatchback" >
+                        <div class="col-xs-4 col-lg-4">
+                           <div href="#portfolioModal1" class="" data-toggle="modal">
+                              <img src="../images/website/maruti_swift_vdi_large.png" class="img-responsive website hatchbackCar" id="1" alt="Maruti Suzuki Swift">
+                           </div>
+                           <div class="title text-primary">Maruti Suzuki Swift</div>
+                        </div>
+                        <div class="col-xs-4 col-lg-4">
+                           <div href="#portfolioModal3" class="" data-toggle="modal">
+                              <img src="../images/website/chevrolet_tavera.png" class="img-responsive website suvCar" id="3" alt="Chevrolet Tavera">
+                           </div>
+                           <div class="title text-primary">Chevrolet Tavera</div>
+                        </div>
+                        <div class="col-xs-4 col-lg-4">
+                           <div href="#portfolioModal6" class="" data-toggle="modal">
+                              <img src="../images/website/toyota_innova_large.png" class="img-responsive website suvCar" id="6" alt="Toyota Innova">
+                           </div>
+                           <div class="title text-primary">Toyota Innova</div>
+                        </div>
+                     </div>
+                     <div class="row hatchback hide" >
                         <div class="col-xs-4 col-lg-4">
                            <div href="#portfolioModal1" class="" data-toggle="modal">
                               <img src="../images/website/maruti_swift_vdi_large.png" class="img-responsive website hatchbackCar" id="1" alt="Maruti Suzuki Swift">
