--- a/applications/ws/local/client/tab/register/RegisterCar.html
+++ b/applications/ws/local/client/tab/register/RegisterCar.html
@@ -118,6 +118,12 @@
                            </div>
                         </div>
                         <div class="form-group">
+                           <label class="control-label col-sm-2" >Air Conditioner:</label>
+                           <div class="col-sm-10">          
+                              <input type="text" class="form-control" style="width:70%" id="ac" placeholder="Ac car?">
+                           </div>
+                        </div>
+                        <div class="form-group">
                            <label class="control-label col-sm-2" >Car Number:</label>
                            <div class="col-sm-10">          
                               <input type="text" class="form-control" style="width:70%" id="carNumber" placeholder="Enter Car Number">
