total cars availability

--- a/applications/ws/local/client/tab/mobile/rentCars/carDetails.html
+++ b/applications/ws/local/client/tab/mobile/rentCars/carDetails.html
@@ -11,8 +11,10 @@
       <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="../css/jquery-ui.css">
       <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+   <link href="../css/loader.css" rel="stylesheet">
    </head>
    <body id="page-top" class="index">
+<div class="loader"></div>
       <!-- Header -->
         <header class=".tab-header navbar-fixed-top mobileView">
 		<div class="container ">
