--- a/applications/ws/local/client/tab/mobile/rentCars/cars.html
+++ b/applications/ws/local/client/tab/mobile/rentCars/cars.html
@@ -9,8 +9,10 @@
       <link href="../css/bootstrap.min.css" rel="stylesheet">
       <link href="../css/freelancer.css" rel="stylesheet">
       <link href="../css/tab.css" rel="stylesheet">
+  <link href="../css/loader.css" rel="stylesheet">
    </head>
    <body id="page-top" class="index">
+<div class="loader"></div>
       <header class=".tab-header navbar-fixed-top mobile hide">
          <div class="container ">
             <div class="col-xs-2">
@@ -304,5 +306,8 @@
       <script src="../js/general/freelancer.js"></script>
       <script src="../js/general/jquery-ui.js"></script>
       <script src="../js/rentCars/cars.js"></script>
+      <script>
+		$(".loader").addClass("hide");
+	</script>
    </body>
 </html>
