--- a/applications/ws/prod/client/tab/mobile/rentCars/confirmBooking.html
+++ b/applications/ws/prod/client/tab/mobile/rentCars/confirmBooking.html
@@ -9,8 +9,10 @@
       <link href="../css/bootstrap.min.css" rel="stylesheet">
       <link href="../css/freelancer.css" rel="stylesheet">
       <link href="../css/tab.css" rel="stylesheet">
+   <link href="../css/loader.css" rel="stylesheet">
    </head>
-   <body id="page-top" class="index" >
+   <body id="page-top" class="index">
+<div class="loader hide"></div>
       <header class=".tab-header navbar-fixed-top">
          <div class="container ">
             <div class="col-xs-2">
