--- a/applications/ws/prod/client/tab/mobile/rentCars/confirmBooking.html
+++ b/applications/ws/prod/client/tab/mobile/rentCars/confirmBooking.html
@@ -44,7 +44,10 @@
                      <div class="row control-group error">
                         <div class="form-group col-xs-12 floating-label-form-group controls email">
                            <label>Email Address</label>
-                           <input type="email" class="form-control" placeholder="Email Address (optional)" id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="true">
+                           <input type="email" class="form-control" placeholder="Email Address" id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="true">
+			    <ul class="alert" role="alert">
+                              <li>Please enter your name.</li>
+                           </ul>
                            </p>
                         </div>
                      </div>
