--- a/applications/ws/prod/client/tab/mobile/rentCars/contact.html
+++ b/applications/ws/prod/client/tab/mobile/rentCars/contact.html
@@ -12,10 +12,15 @@
       <link rel="stylesheet" href="../css/jquery-ui.css">
    </head>
    <body id="page-top" class="index" >
-     <header class=".tab-header navbar-fixed-top mobile">
+     <header class=".tab-header navbar-fixed-top">
          <div class="container ">
-            <div class="col-sm-12">
-               <h3>Contact us</h3>
+            <div class="col-xs-2">
+               <h3>
+                  <i class="glyphicon glyphicon-arrow-left text-primary"></i>
+               </h3>
+            </div>
+            <div class="col-xs-8">
+               <h3>Contact</h3>
             </div>
          </div>
       </header>
@@ -75,7 +80,7 @@
                      <div id="success"></div>
                      <div class="row">
                         <div class="form-group col-xs-12">
-                           <button type="submit" class="btn btn-success btn-lg btn-block">Send</button>
+                           <center><button type="submit" class="btn btn-success btn-md">Send</button></center>
                         </div>
                      </div>
                   </form>
@@ -100,6 +105,10 @@
                   $('.websiteView').hide();
               }
 	$('.alert').hide();
+
+$('.glyphicon-arrow-left').click(function(){
+        parent.history.back();
+    });
          
       </script>
    </body>
