--- a/applications/ws/prod/client/tab/website/rentCars/confirmBooking.html
+++ b/applications/ws/prod/client/tab/website/rentCars/confirmBooking.html
@@ -41,8 +41,8 @@
                            <label>Name</label>
                            <input type="text" class="form-control" placeholder="Name" id="name" required="" data-validation-required-message="Please enter your name." aria-invalid="true">
                            <p class="help-block text-danger">
-                           <ul class="alert" role="alert">
-                              <li>Please enter your name.</li>
+                           <ul class="alert danger" role="alert" style="list-style-type:none">
+                              <li class="danger">Please enter your name.</li>
                            </ul>
                            </p>
                         </div>
@@ -50,7 +50,10 @@
                      <div class="row control-group error">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                            <label>Email Address</label>
-                           <input type="email" class="form-control" placeholder="Email Address (optional)" id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="true">
+                           <input type="email" class="form-control" placeholder="Email Address" id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="true">
+			   <ul class="alert danger" role="alert" style="list-style-type:none">
+                              <li class="danger">Please enter your EmailId.</li>
+                           </ul>
                            </p>
                         </div>
                      </div>
@@ -59,8 +62,8 @@
                            <label>Phone Number</label>
                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required="" data-validation-required-message="Please enter your phone number." aria-invalid="true">
                            <p class="help-block text-danger">
-                           <ul class="alert" role="alert">
-                              <li>Please enter your phone number.</li>
+                           <ul class="alert danger" role="alert" style="list-style-type:none">
+                              <li class="danger">Please enter your phone number.</li>
                            </ul>
                            </p>
                         </div>
@@ -77,62 +80,6 @@
             </div>
          </div>
       </section>
-      <!-- Footer -->
-      <footer class="text-center websiteView">
-         <div class="footer-above">
-            <div class="container">
-               <div class="row">
-                  <div class="footer-col col-md-4">
-                     <h3>Location</h3>
-                     <p>234 jayanagar 1st Block<br>Bangalore, 560011</p>
-                  </div>
-                  <div class="footer-col col-md-4">
-                     <h3>Around the Web</h3>
-                     <ul style="list-style-type: none;">
-                        <li style="display: inline; margin: 10px; margin-left: 0px;">
-                           <a class="grey-text text-lighten-3" href="http://fb.com/peersome">
-                           <img style="height: 2.5rem; width: 2.5rem;"
-                              src="http://i.imgur.com/84qlKB1.png" alt="facebook">
-                           </a>
-                        </li>
-                        <li style="display: inline; margin: 10px;"><a
-                           class="grey-text text-lighten-3"
-                           href="http://twitter.com/peer_some"> <img
-                           style="height: 2.5rem; width: 2.5rem;"
-                           src="http://i.imgur.com/btV1NJf.png" alt="twitter">
-                           </a>
-                        </li>
-                        <li style="display: inline; margin: 10px;"><a
-                           class="grey-text text-lighten-3"
-                           href="http://instagram.com/peersome"> <img
-                           style="height: 2.5rem; width: 2.5rem;"
-                           src="http://i.imgur.com/ve0HJDm.png" alt="instagram">
-                           </a>
-                        </li>
-                        <li style="display: inline;"><a
-                           class="grey-text text-lighten-3" href="#!"> <img src=""
-                           alt="">
-                           </a>
-                        </li>
-                     </ul>
-                  </div>
-                  <div class="footer-col col-md-4">
-                     <h3>About Take A Break</h3>
-                     <p >Take A Break is a car rental marketplace, connecting you to all local self driver car with the best fare rate across the city.</p>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="footer-below">
-            <div class="container">
-               <div class="row">
-                  <div class="col-lg-12">
-                     Copyright © Take A Break 2016
-                  </div>
-               </div>
-            </div>
-         </div>
-      </footer>
       <script src="../js/general/httputil.js"></script>
       <script src="../js/general/jquery.js"></script>
       <script src="../js/general/bootstrap.min.js"></script>
