--- a/applications/ws/local/client/tab/mobile/rentCars/index.html
+++ b/applications/ws/local/client/tab/mobile/rentCars/index.html
@@ -18,7 +18,7 @@
    <body id="page-top" class="index">
 <div class="loader"></div>
       <!-- Navigation -->
-     <nav class="navbar navbar-shrink navbar-default navbar-fixed-top">
+     <nav class="navbar navbar-shrink navbar-default navbar-fixed-top" id="navigator">
    <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header page-scroll">
@@ -74,7 +74,7 @@
    <!-- /.container-fluid -->
 </nav>
 <!-- Header -->
-<header class=".tab-header websiteView mainPage hide">
+<header class=".tab-header " >
    <div class="container">
       <div class="col-sm-12">
          <h3>Pick Up Details</h3>
@@ -197,6 +197,5 @@
 
 	function onSignIn(googleUser) {}
       </script>
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <!-- TabCars --> <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8550053866997322" data-ad-slot="6134903491" data-ad-format="auto"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
    </body>
 </html>
