--- a/applications/ws/local/client/tab/website/rentCars/index.html
+++ b/applications/ws/local/client/tab/website/rentCars/index.html
@@ -39,7 +39,7 @@
                id="bs-example-navbar-collapse-1" aria-expanded="false"
                style="height: 1px;">
                <ul class="nav navbar-nav navbar-left list-group">
-                  <li class="page-scroll"><a href="#page-top">HOME</a></li>
+                  <li class="page-scroll active"><a href="index.html">HOME</a></li>
                   <li class="page-scroll"><a href="#offers">OFFERS FOR YOU</a></li>
                </ul>
                <ul class="nav navbar-nav navbar-right">
@@ -99,7 +99,7 @@
                                  <h5 id="visitinglabel" class="help-block text-success"></h5>
                                  <h6>
                                     <input list="visiting" id="visiting_city"
-                                       class="form-control text-info" placeholder="Visiting City">
+                                       class="form-control text-info" placeholder="Visiting City (Any One)">
                                  </h6>
                                  <h5 id="visitingwarning" class="help-block text-danger"></h5>
                                  <datalist id="visiting">
@@ -155,196 +155,143 @@
                   </div>
                </div>
             </div>
-      </div>
-      </section>
-      <!-- Portfolio Grid Section -->
-      <section id="tabCars" class="websiteView hide">
-         <div class="container">
-            <div class="row">
-               <div class="col-lg-12 text-center">
-                  <h2>TAB Cars</h2>
-                  <hr class="star-primary">
-               </div>
-            </div>
-            <div class="row website">
-               <div class="col-lg-4 portfolio-item">
-                  <a href="#portfolioModal1" class="" data-toggle="modal"> <img
-                     src="../images/website/ford_classic.png"
-                     class="img-responsive website" alt="">
-                  </a>
-               </div>
-               <div class="col-lg-4 portfolio-item">
-                  <a href="#portfolioModal2" class="" data-toggle="modal"> <img
-                     src="../images/website/mahindra_scorpio.png"
-                     class="img-responsive website" alt="">
-                  </a>
-               </div>
-               <div class="col-lg-4 portfolio-item">
-                  <a href="#portfolioModal3" class="" data-toggle="modal"> <img
-                     src="../images/website/datsun_go.png"
-                     class="img-responsive website" alt="">
-                  </a>
-               </div>
-               <div class="col-lg-4 portfolio-item">
-                  <a href="#portfolioModal4" class="" data-toggle="modal"> <img
-                     src="../images/website/honda_accord_large.png"
-                     class="img-responsive website" alt="">
-                  </a>
-               </div>
-               <div class="col-lg-4 portfolio-item">
-                  <a href="#portfolioModal5" class="" data-toggle="modal"> <img
-                     src="../images/website/toyota_fortuner.png"
-                     class="img-responsive website" alt="">
-                  </a>
-               </div>
-               <div class="col-lg-4 portfolio-item">
-                  <a href="#portfolioModal6" class="" data-toggle="modal"> <img
-                     src="../images/website/toyota_liva.png"
-                     class="img-responsive website" alt="">
-                  </a>
-               </div>
-            </div>
-         </div>
-      </section>
-      <!-- Contact Section -->
-      <section id="contact" class="websiteView hide">
-         <div class="container">
-            <div class="row">
-               <div class="col-lg-12 text-center">
-                  <h2>Contact US</h2>
-                  <br>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-lg-8 col-lg-offset-2">
-                  <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                  <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                  <form name="sentMessage" id="contactForm" novalidate=""
-                     class="error">
-                     <div class="row control-group error">
-                        <div
-                           class="form-group col-lg-12 floating-label-form-group controls">
-                           <label>Name</label> <input type="text" class="form-control"
-                              placeholder="Name" id="name" required=""
-                              data-validation-required-message="Please enter your name."
-                              aria-invalid="true">
-                           <p class="help-block text-danger"></p>
-                           <ul class="alert" role="alert" style="display: none;">
-                              <li>Please enter your name.</li>
-                           </ul>
-                           <p></p>
-                        </div>
-                     </div>
-                     <div class="row control-group error">
-                        <div
-                           class="form-group col-lg-12 floating-label-form-group controls">
-                           <label>Email Address</label> <input type="email"
-                              class="form-control" placeholder="Email Address" id="email"
-                              required=""
-                              data-validation-required-message="Please enter your email address."
-                              aria-invalid="true">
-                           <p class="help-block text-danger"></p>
-                           <ul class="alert" role="alert" style="display: none;">
-                              <li>Please enter your email address.</li>
-                           </ul>
-                           <p></p>
-                        </div>
-                     </div>
-                     <div class="row control-group error">
-                        <div
-                           class="form-group col-lg-12 floating-label-form-group controls">
-                           <label>Phone Number</label> <input type="tel"
-                              class="form-control" placeholder="Phone Number" id="phone"
-                              required=""
-                              data-validation-required-message="Please enter your phone number."
-                              aria-invalid="true">
-                           <p class="help-block text-danger"></p>
-                           <ul class="alert" role="alert" style="display: none;">
-                              <li>Please enter your phone number.</li>
-                           </ul>
-                           <p></p>
-                        </div>
-                     </div>
-                     <div class="row control-group error">
-                        <div
-                           class="form-group col-lg-12 floating-label-form-group controls">
-                           <label>Message</label>
-                           <textarea rows="3" class="form-control" placeholder="Message"
-                              id="message" required=""
-                              data-validation-required-message="Please enter a message."
-                              aria-invalid="true"></textarea>
-                           <p class="help-block text-danger"></p>
-                           <ul class="alert" role="alert" style="display: none;">
-                              <li>Please enter a message.</li>
-                           </ul>
-                           <p></p>
-                        </div>
-                     </div>
-                     <br>
-                     <div id="success"></div>
-                     <div class="row">
-                        <div class="form-group col-lg-12">
-                           <button type="submit" class="btn btn-success btn-lg">Send</button>
-                        </div>
-                     </div>
-                  </form>
-               </div>
-            </div>
-         </div>
-      </section>
-      <!-- Footer -->
-      <footer class="text-center">
-         <div class="footer-above">
+         </section>
+         <!-- Portfolio Grid Section -->
+         <section id="tabCars" class="websiteView hide">
             <div class="container">
                <div class="row">
-                  <div class="footer-col col-md-4">
-                     <h3>Location</h3>
-                     <p>
-                        234 jayanagar 1st Block<br>Bangalore, 560011
-                     </p>
+                  <div class="col-lg-12 text-center">
+                     <h2>TAB Cars</h2>
+                     <hr class="star-primary">
                   </div>
-                  <div class="footer-col col-md-4">
-                     <h3>Around the Web</h3>
-                     <ul style="list-style-type: none;">
-                        <li style="display: inline; margin: 10px; margin-left: 0px;">
-                           <a class="grey-text text-lighten-3"
-                              href="http://fb.com/peersome"> <img
-                              style="height: 2.5rem; width: 2.5rem;"
-                              src="http://i.imgur.com/84qlKB1.png" alt="facebook">
-                           </a>
-                        </li>
-                        <li style="display: inline; margin: 10px;"><a
-                           class="grey-text text-lighten-3"
-                           href="http://twitter.com/peer_some"> <img
-                           style="height: 2.5rem; width: 2.5rem;"
-                           src="http://i.imgur.com/btV1NJf.png" alt="twitter">
-                           </a>
-                        </li>
-                        <li style="display: inline; margin: 10px;"><a
-                           class="grey-text text-lighten-3"
-                           href="http://instagram.com/peersome"> <img
-                           style="height: 2.5rem; width: 2.5rem;"
-                           src="http://i.imgur.com/ve0HJDm.png" alt="instagram">
-                           </a>
-                        </li>
-                        <li style="display: inline;"><a
-                           class="grey-text text-lighten-3" href="#!"> <img src=""
-                           alt="">
-                           </a>
-                        </li>
-                     </ul>
+               </div>
+               <div class="row website">
+                  <div class="col-lg-4 portfolio-item">
+                     <a href="#portfolioModal1" class="" data-toggle="modal"> <img
+                        src="../images/website/ford_classic.png"
+                        class="img-responsive website" alt="">
+                     </a>
                   </div>
-                  <div class="footer-col col-md-4">
-                     <h3>About Take A Break</h3>
-                     <p>Take A Break is a car rental marketplace, connecting you
-                        to all local self driver car with the best fare rate across the
-                        city.
-                     </p>
+                  <div class="col-lg-4 portfolio-item">
+                     <a href="#portfolioModal2" class="" data-toggle="modal"> <img
+                        src="../images/website/mahindra_scorpio.png"
+                        class="img-responsive website" alt="">
+                     </a>
+                  </div>
+                  <div class="col-lg-4 portfolio-item">
+                     <a href="#portfolioModal3" class="" data-toggle="modal"> <img
+                        src="../images/website/datsun_go.png"
+                        class="img-responsive website" alt="">
+                     </a>
+                  </div>
+                  <div class="col-lg-4 portfolio-item">
+                     <a href="#portfolioModal4" class="" data-toggle="modal"> <img
+                        src="../images/website/honda_accord_large.png"
+                        class="img-responsive website" alt="">
+                     </a>
+                  </div>
+                  <div class="col-lg-4 portfolio-item">
+                     <a href="#portfolioModal5" class="" data-toggle="modal"> <img
+                        src="../images/website/toyota_fortuner.png"
+                        class="img-responsive website" alt="">
+                     </a>
+                  </div>
+                  <div class="col-lg-4 portfolio-item">
+                     <a href="#portfolioModal6" class="" data-toggle="modal"> <img
+                        src="../images/website/toyota_liva.png"
+                        class="img-responsive website" alt="">
+                     </a>
                   </div>
                </div>
             </div>
-         </div>
-      </footer>
+         </section>
+         <!-- Contact Section -->
+         <section id="contact" class="websiteView hide">
+            <div class="container">
+               <div class="row">
+                  <div class="col-lg-12 text-center">
+                     <h2>Contact US</h2>
+                     <br>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-lg-8 col-lg-offset-2">
+                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+                     <form name="sentMessage" id="contactForm" novalidate=""
+                        class="error">
+                        <div class="row control-group error">
+                           <div
+                              class="form-group col-lg-12 floating-label-form-group controls">
+                              <label>Name</label> <input type="text" class="form-control"
+                                 placeholder="Name" id="name" required=""
+                                 data-validation-required-message="Please enter your name."
+                                 aria-invalid="true">
+                              <p class="help-block text-danger"></p>
+                              <ul class="alert" role="alert" style="display: none;">
+                                 <li>Please enter your name.</li>
+                              </ul>
+                              <p></p>
+                           </div>
+                        </div>
+                        <div class="row control-group error">
+                           <div
+                              class="form-group col-lg-12 floating-label-form-group controls">
+                              <label>Email Address</label> <input type="email"
+                                 class="form-control" placeholder="Email Address" id="email"
+                                 required=""
+                                 data-validation-required-message="Please enter your email address."
+                                 aria-invalid="true">
+                              <p class="help-block text-danger"></p>
+                              <ul class="alert" role="alert" style="display: none;">
+                                 <li>Please enter your email address.</li>
+                              </ul>
+                              <p></p>
+                           </div>
+                        </div>
+                        <div class="row control-group error">
+                           <div
+                              class="form-group col-lg-12 floating-label-form-group controls">
+                              <label>Phone Number</label> <input type="tel"
+                                 class="form-control" placeholder="Phone Number" id="phone"
+                                 required=""
+                                 data-validation-required-message="Please enter your phone number."
+                                 aria-invalid="true">
+                              <p class="help-block text-danger"></p>
+                              <ul class="alert" role="alert" style="display: none;">
+                                 <li>Please enter your phone number.</li>
+                              </ul>
+                              <p></p>
+                           </div>
+                        </div>
+                        <div class="row control-group error">
+                           <div
+                              class="form-group col-lg-12 floating-label-form-group controls">
+                              <label>Message</label>
+                              <textarea rows="3" class="form-control" placeholder="Message"
+                                 id="message" required=""
+                                 data-validation-required-message="Please enter a message."
+                                 aria-invalid="true"></textarea>
+                              <p class="help-block text-danger"></p>
+                              <ul class="alert" role="alert" style="display: none;">
+                                 <li>Please enter a message.</li>
+                              </ul>
+                              <p></p>
+                           </div>
+                        </div>
+                        <br>
+                        <div id="success"></div>
+                        <div class="row">
+                           <div class="form-group col-lg-12">
+                              <button type="submit" class="btn btn-success btn-lg">Send</button>
+                           </div>
+                        </div>
+                     </form>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <!-- Footer -->
       </div>
       <!-- Javascript to support date picker -->
       <script src="../js/general/jquery-ui.js"></script>
@@ -357,3 +304,4 @@
       <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
    </body>
 </html>
+
