--- a/applications/ws/local/client/tab/website/rentCars/orderDetails.html
+++ b/applications/ws/local/client/tab/website/rentCars/orderDetails.html
@@ -66,12 +66,12 @@
                         <div class="col-xs-6 col-lg-6" ><i class="fa fa-inr" style="font-size:15px" id="minimum_fare"></i></div>
 			<hr/>
                      </div>
-                     <div class="row">
+                     <!--<div class="row">
 			<hr/>
                         <div class="col-xs-6 col-lg-6 text-info">Driver Bata Charges/Day:</div>
                         <div class="col-xs-6 col-lg-6"><i class="fa fa-inr" style="font-size:15px" id="driver_bata"></i></div>
 			<hr/>
-                     </div>
+                     </div>-->
                      <div class="row">
 			<hr/>
                         <div class="col-xs-6 col-lg-6 text-info">Coupons Applied:</div>
