--- a/applications/ws/prod/client/tab/website/rentCars/confirmBooking.html
+++ b/applications/ws/prod/client/tab/website/rentCars/confirmBooking.html
@@ -21,6 +21,13 @@
       <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="../css/jquery-ui.css">
    </head>
+<style>
+ul
+{
+    list-style-type: none;
+}
+
+</style>
    <body id="page-top" class="index" >
       <header class=".tab-header navbar-fixed-top">
          <div class="container ">
@@ -41,8 +48,8 @@
                            <label>Name</label>
                            <input type="text" class="form-control" placeholder="Name" id="name" required="" data-validation-required-message="Please enter your name." aria-invalid="true">
                            <p class="help-block text-danger">
-                           <ul class="alert danger" role="alert" style="list-style-type:none">
-                              <li class="danger">Please enter your name.</li>
+                           <ul class="alert name-alert" role="alert" style="list-style-type:none">
+                              <li class="text-danger">Please enter your name.</li>
                            </ul>
                            </p>
                         </div>
@@ -51,8 +58,8 @@
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                            <label>Email Address</label>
                            <input type="email" class="form-control" placeholder="Email Address" id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="true">
-			   <ul class="alert danger" role="alert" style="list-style-type:none">
-                              <li class="danger">Please enter your EmailId.</li>
+			   <ul class="alert email-alert" role="alert" style="list-style-type:none">
+                              <li class="text-danger">Please enter your EmailId.</li>
                            </ul>
                            </p>
                         </div>
@@ -62,8 +69,8 @@
                            <label>Phone Number</label>
                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required="" data-validation-required-message="Please enter your phone number." aria-invalid="true">
                            <p class="help-block text-danger">
-                           <ul class="alert danger" role="alert" style="list-style-type:none">
-                              <li class="danger">Please enter your phone number.</li>
+                           <ul class="alert num-alert" role="alert" style="list-style-type:none">
+                              <li class="text-danger">Please enter your phone number.</li>
                            </ul>
                            </p>
                         </div>
